--- a/.github/workflows/opta_deploy.yml
+++ b/.github/workflows/opta_deploy.yml
@@ -21,7 +21,7 @@ on:
         required: true
 
 concurrency:
-  group: "${{ inputs.ENVIRONMENT }}-deploy"
+  group: "${{ inputs.ENVIRONMENT }}-${{ inputs.OPTA_FILE }}-deploy"
   cancel-in-progress: true
 
 env:
