--- a/.github/workflows/kustomize_deploy_migrations.yml
+++ b/.github/workflows/kustomize_deploy_migrations.yml
@@ -57,10 +57,11 @@ jobs:
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
         with:
-          kustomize-version: "3.6.1"
+          kustomize-version: "4.5.7"
 
       - name: Kustomize update the Image tag for Environment
         run: |
+          kustomize version --short
           pushd wheel-deploys/k8s/${K8S_SERVICE}/overlays/${ENVIRONMENT}
           kustomize edit set image 021057518589.dkr.ecr.us-west-2.amazonaws.com/${K8S_SERVICE}-migrations:{GITHUB_SHA}
         env:
