testing terragrunt reusable

--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -17,6 +17,7 @@ concurrency:
 
 env:
   AWS_REGION: "us-west-2"
+  DEPLOYMENT_DIR: "terraform/deployments/aws_acscounts/{{ inputs.ENVIRONMENT }}"
 
 jobs:
   terragrunt:
@@ -48,26 +49,26 @@ jobs:
       - name: Terragrunt Format
         id: fmt
         run: |
-          cd terraform/deployments/aws_accounts/{{ inputs.ENVIRONMENT }}
+          "cd ${DEPLOYMENT_DIR}"
           terragrunt run-all hclfmt
 
       - name: Terragrunt Init
         id: init
         run: |
-          cd terraform/deployments/aws_accounts/{{ inputs.ENVIRONMENT }}
+          "cd ${DEPLOYMENT_DIR}"
           terragrunt run-all  init
 
       - name: Terragrunt Validate
         id: validate
         run: |
-           cd terraform/deployments/aws_accounts/{{ inputs.ENVIRONMENT }}
+           "cd ${DEPLOYMENT_DIR}"
            terragrunt run-all validate -no-color
 
       - name: Terragrunt Plan
         id: plan
         if: github.event_name == 'pull_request'
         run: |
-          cd terraform/deployments/aws_accounts/{{ inputs.ENVIRONMENT }}
+          "cd ${DEPLOYMENT_DIR}"
           terragrunt run-all plan -no-color -input=false
         continue-on-error: true
 
@@ -109,5 +110,5 @@ jobs:
       - name: Terragrunt run-all Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          cd terraform/deployments/aws_accounts/{{ inputs.ENVIRONMENT }}
+          "cd ${DEPLOYMENT_DIR}"
           terragrunt run-all apply --terragrunt-non-interactive
