--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -17,7 +17,6 @@ concurrency:
 
 env:
   AWS_REGION: "us-west-2"
-  DEPLOYMENT_DIR: "terraform/deployments/aws_acscounts/{{ inputs.ENVIRONMENT }}"
 
 jobs:
   terragrunt:
@@ -49,26 +48,26 @@ jobs:
       - name: Terragrunt Format
         id: fmt
         run: |
-          "cd ${DEPLOYMENT_DIR}"
+          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all hclfmt
 
       - name: Terragrunt Init
         id: init
         run: |
-          "cd ${DEPLOYMENT_DIR}"
+          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all  init
 
       - name: Terragrunt Validate
         id: validate
         run: |
-           "cd ${DEPLOYMENT_DIR}"
+           "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
            terragrunt run-all validate -no-color
 
       - name: Terragrunt Plan
         id: plan
         if: github.event_name == 'pull_request'
         run: |
-          "cd ${DEPLOYMENT_DIR}"
+          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all plan -no-color -input=false
         continue-on-error: true
 
@@ -110,5 +109,5 @@ jobs:
       - name: Terragrunt run-all Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          "cd ${DEPLOYMENT_DIR}"
+          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all apply --terragrunt-non-interactive
