--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -60,20 +60,20 @@ jobs:
       - name: Terragrunt Init
         id: init
         run: |
-          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
+          cd "terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all  init
 
       - name: Terragrunt Validate
         id: validate
         run: |
-           "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
+           cd "terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
            terragrunt run-all validate -no-color
 
       - name: Terragrunt Plan
         id: plan
         if: github.event_name == 'pull_request'
         run: |
-          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
+          cd "terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all plan -no-color -input=false
         continue-on-error: true
 
@@ -115,5 +115,5 @@ jobs:
       - name: Terragrunt run-all Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          "cd terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
+          cd "terraform/deployments/aws_accounts/${{ inputs.ENVIRONMENT }}"
           terragrunt run-all apply --terragrunt-non-interactive
