testing terragrunt reusable

--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -24,7 +24,7 @@ jobs:
   terragrunt:
     environment: ${{ inputs.ENVIRONMENT }}
     name: "Terragrunt"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
 
       - name: Checkout
