--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ on:
         required: true
 
 concurrency:
-  group: "${{ inputs.ENVIRONMENT }}-${{ inputs.OPTA_FILE }}-deploy"
+  group: "${{ inputs.ENVIRONMENT }}-${{ inputs.DEPLOY_OPTA_FILE }}-deploy"
   cancel-in-progress: true
 
 env:
