--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ env:
 jobs:
   opta-deploy:
     name: "Opta ${{ inputs.ENVIRONMENT }} Deploy"
-    environment: $ENVIRONMENT
+    environment: ${{ inputs.ENVIRONMENT }}
     runs-on: ubuntu-20.04
     steps:
       - name: Configure AWS credentials for Opta Deploy
