--- a/.github/workflows/opta_deploy.yml
+++ b/.github/workflows/opta_deploy.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           kubectl version --client --short
           aws --version
-          terraform state list
+          opta force-unlock
           opta apply -c $OPTA_CONFIG_FILE --var image-tag=$DOCKER_IMAGE_TAG --image-tag $DOCKER_IMAGE_TAG --detailed-plan --auto-approve
           echo "Deployed $DOCKER_IMAGE_TAG to $ENVIRONMENT"
         env:
