--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -105,7 +105,8 @@ jobs:
           CURRENT_REVISION=$(helm history ${{ inputs.SERVICE }} --namespace ${{ inputs.NAMESPACE }} -o json | jq -r '.[-1].revision // 0')
           
           echo "current_revision=$CURRENT_REVISION" >> $GITHUB_OUTPUT
-          
+          ls -la wheel-deploys
+
           # Deploy the application using Helm
           helm upgrade --install ${{ inputs.SERVICE }} ${{ inputs.CHART_PATH }} \
             --values ${{ inputs.VALUES_PATH }} \
