--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -80,6 +80,7 @@ jobs:
           repository: enzyme-health/wheel-deploys
           token: ${{ secrets.PAT }}
           path: wheel-deploys
+          ref: opta-migration-e2e
 
       - name: Install kubectl
         uses: azure/setup-kubectl@v2.0
