--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -8,7 +8,7 @@ on:
         type: string
         description: "Docker image name to deploy"
       DOCKER_IMAGE_TAG:
-        required: false
+        required: true
         type: string
         description: "Docker image tag to deploy"
       ENVIRONMENT:
@@ -23,10 +23,6 @@ on:
         required: true
         type: string
         description: "Name of the Helm release to deploy"
-      SERVICE:
-        required: true
-        type: string
-        description: "Service to deploy (on-demand-api, on-demand-api-sidekiq, etc.)"
       CHART_PATH:
         required: true
         type: string
@@ -58,7 +54,7 @@ on:
         required: true
 
 concurrency:
-  group: "${{ inputs.ENVIRONMENT }}-${{ inputs.SERVICE }}-deploy"
+  group: "${{ inputs.ENVIRONMENT }}-${{ inputs.HELM_RELEASE_NAME }}-deploy"
   cancel-in-progress: true
 
 env:
@@ -106,7 +102,7 @@ jobs:
         id: deploy
         run: |
           # Get current revision before deployment
-          CURRENT_REVISION=$(helm history ${{ inputs.SERVICE }} --namespace ${{ inputs.NAMESPACE }} -o json | jq -r '.[-1].revision // 0')
+          CURRENT_REVISION=$(helm history ${{ inputs.HELM_RELEASE_NAME }} --namespace ${{ inputs.NAMESPACE }} -o json | jq -r '.[-1].revision // 0')
 
           echo "current_revision=$CURRENT_REVISION" >> $GITHUB_OUTPUT
 
@@ -119,10 +115,3 @@ jobs:
             ${{ inputs.WAIT && '--wait' || '' }}
 
           echo "Deployed ${{ inputs.DOCKER_IMAGE_TAG }} to ${{ inputs.ENVIRONMENT }}"
-
-      # - name: Rollback on failure
-      #   if: failure()
-      #   run: |
-      #     echo "Deployment failed, rolling back to previous revision"
-      #     helm rollback ${{ inputs.SERVICE }} ${{ steps.deploy.outputs.current_revision }} --namespace ${{ inputs.NAMESPACE }}
-      #     exit 1
