--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -108,7 +108,7 @@ jobs:
 
           # Deploy the application using Helm
           helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            --values ./k8s-helm/${{ inputs.ENVIRONMENT }}/{{ inputs.VALUES_FILE_NAME }} \
+            --values wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/{{ inputs.VALUES_FILE_NAME }} \
             --set version=${{ inputs.DOCKER_IMAGE_TAG }} \
             --set image=${{ inputs.DOCKER_IMAGE_NAME }}:${{ inputs.DOCKER_IMAGE_TAG }} \
             --timeout ${{ inputs.TIMEOUT }}s \
