feat: update helm_deploy YAML to absorb Wheel Team's feedback

--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -43,10 +43,8 @@ on:
       SET_PARAMS:
         required: false
         type: string
-        description: "YAML formatted string of key-value pairs to pass as --set parameters to Helm (e.g. 'key1: value1\nkey2: value2')"
-        default: |
-          version: ${DOCKER_IMAGE_TAG}
-          image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
+        description: "JSON formatted string of key-value pairs to pass as --set parameters to Helm"
+        default: '{"version":"${{ inputs.DOCKER_IMAGE_TAG }}","image":"${{ inputs.DOCKER_IMAGE_NAME }}:${{ inputs.DOCKER_IMAGE_TAG }}"}'
     secrets:
       AWS_ACCOUNT_ACCESS_KEY_ID:
         required: true
@@ -83,10 +81,10 @@ jobs:
           path: wheel-deploys
           ref: opta-migration-e2e
 
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v2.0
-        with:
-          version: "v1.25.16"
+      # - name: Install kubectl
+      #   uses: azure/setup-kubectl@v3
+      #   with:
+      #     version: "v1.28.2"
 
       - name: Install Helm
         uses: azure/setup-helm@v3
@@ -100,43 +98,31 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Install yq
-        run: |
-          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          sudo chmod a+x /usr/local/bin/yq
-
       - name: Configure kubectl context
         run: |
           aws eks update-kubeconfig --name ${{ inputs.EKS_CLUSTER_NAME }} --region us-west-2
 
+      - name: Set Helm Set Params
+        run: |
+          # Convert JSON parameters to Helm --set format
+          HELM_SET_PARAMS=$(echo '${{ inputs.SET_PARAMS }}' | jq -r 'to_entries | .[] | "--set " + .key + "=" + .value' | tr '\n' ' ')
+          echo "HELM_SET_PARAMS=$HELM_SET_PARAMS" >> $GITHUB_ENV
+
       - name: Run Helm Diff
         run: |
-          # Convert YAML parameters to Helm --set format
-          HELM_SET_PARAMS=$(echo "${{ inputs.SET_PARAMS }}" | yq e -o=json - | jq -r 'to_entries | .[] | "--set " + .key + "=" + .value' | tr '\n' ' ')
-
           helm diff upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
             --namespace ${{ inputs.NAMESPACE }} --create-namespace \
-            -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/{{ inputs.VALUES_FILE_NAME }} \
+            -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --dry-run=server
 
       - name: Deploy with Helm
         id: deploy
         run: |
-          # Get current revision before deployment
-          CURRENT_REVISION=$(helm history ${{ inputs.HELM_RELEASE_NAME }} --namespace ${{ inputs.NAMESPACE }} -o json | jq -r '.[-1].revision // 0')
-
-          echo "current_revision=$CURRENT_REVISION" >> $GITHUB_OUTPUT
-
-          # Convert YAML parameters to Helm --set format
-          HELM_SET_PARAMS=$(echo "${{ inputs.SET_PARAMS }}" | yq e -o=json - | jq -r 'to_entries | .[] | "--set " + .key + "=" + .value' | tr '\n' ' ')
-
           # Deploy the application using Helm
           helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
             --namespace ${{ inputs.NAMESPACE }} --create-namespace \
-            -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/{{ inputs.VALUES_FILE_NAME }} \
+            -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --timeout ${{ inputs.TIMEOUT }}s \
             --atomic
-
-          echo "Deployed ${{ inputs.DOCKER_IMAGE_TAG }} to ${{ inputs.ENVIRONMENT }}"
