--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -116,13 +116,13 @@ jobs:
             $HELM_SET_PARAMS \
             --dry-run=server
 
-      - name: Deploy with Helm
-        id: deploy
-        run: |
-          # Deploy the application using Helm
-          helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            --namespace ${{ inputs.NAMESPACE }} --create-namespace \
-            -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
-            $HELM_SET_PARAMS \
-            --timeout ${{ inputs.TIMEOUT }}s \
-            --atomic
+      # - name: Deploy with Helm
+      #   id: deploy
+      #   run: |
+      #     # Deploy the application using Helm
+      #     helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
+      #       --namespace ${{ inputs.NAMESPACE }} --create-namespace \
+      #       -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
+      #       $HELM_SET_PARAMS \
+      #       --timeout ${{ inputs.TIMEOUT }}s \
+      #       --atomic
