--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -126,8 +126,8 @@ jobs:
           fi
 
           if [ -n "${{ inputs.SET_PARAMS }}" ]; then
-            # Merge SET_PARAMS and BASE_JSON, with BASE_JSON last so its keys take precedence
-            PARAMS_JSON=$(echo "[${{ inputs.SET_PARAMS }},$BASE_JSON]" | jq 'add')
+            # Merge SET_PARAMS and PARAMS_JSON, with PARAMS_JSON last so its keys take precedence
+            PARAMS_JSON=$(echo "[${{ inputs.SET_PARAMS }},$PARAMS_JSON]" | jq 'add')
           fi
 
           HELM_SET_PARAMS=$(echo "$PARAMS_JSON" | jq -r 'to_entries | .[] | "--set " + .key + "=" + (.value|tostring)' | tr '\n' ' ')
