--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -31,10 +31,10 @@ on:
         required: true
         type: string
         description: "Path to the values file"
-      NAMESPACE:
+      HELM_RELEASE_NAMESPACE:
         required: true
         type: string
-        description: "Kubernetes namespace to deploy to"
+        description: "Kubernetes release namespace to deploy to"
       TIMEOUT:
         required: false
         type: string
@@ -137,7 +137,7 @@ jobs:
       - name: Run Helm Diff
         run: |
           helm diff upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            --namespace ${{ inputs.NAMESPACE }} \
+            --namespace ${{ inputs.HELM_RELEASE_NAMESPACE }} \
             -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --dry-run=server
@@ -147,7 +147,7 @@ jobs:
         run: |
           # Deploy the application using Helm
           helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            --namespace ${{ inputs.NAMESPACE }} --create-namespace \
+            --namespace ${{ inputs.HELM_RELEASE_NAMESPACE }} --create-namespace \
             -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --timeout ${{ inputs.TIMEOUT }}s \
