feat: update namespace handling with create-namespace flag to Helm deployment workflow (PFI-811)

--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -138,7 +138,7 @@ jobs:
       - name: Run Helm Diff
         run: |
           helm diff upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            ${{ inputs.HELM_RELEASE_NAMESPACE != '' && format('--namespace {0} \\', inputs.HELM_RELEASE_NAMESPACE) || '' }}
+            ${{ inputs.HELM_RELEASE_NAMESPACE != '' && format('--namespace {0} ', inputs.HELM_RELEASE_NAMESPACE) || '' }} \
             -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --dry-run=server
@@ -148,7 +148,7 @@ jobs:
         run: |
           # Deploy the application using Helm
           helm upgrade --install ${{ inputs.HELM_RELEASE_NAME }} ${{ inputs.CHART_PATH }} \
-            ${{ inputs.HELM_RELEASE_NAMESPACE != '' && format('--namespace {0} --create-namespace \\', inputs.HELM_RELEASE_NAMESPACE) || '' }}
+            ${{ inputs.HELM_RELEASE_NAMESPACE != '' && format('--namespace {0} --create-namespace ', inputs.HELM_RELEASE_NAMESPACE) || '' }} \
             -f wheel-deploys/k8s-helm/${{ inputs.ENVIRONMENT }}/${{ inputs.VALUES_FILE_NAME }} \
             $HELM_SET_PARAMS \
             --timeout ${{ inputs.TIMEOUT }}s \
