--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -56,8 +56,9 @@ on:
         description: "If true, the deployment will not be applied and will run in dry-run mode"
         default: false
       SUPPRESS_HELM_OUTPUT:
-        description: 'If true, will not log the helm command output'
         required: false
+        type: boolean
+        description: 'If true, will not log the helm command output'
         default: 'false'
     secrets:
       AWS_ACCOUNT_ACCESS_KEY_ID:
