test: use migration/opta-deploy branch of wheel-deploys

--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -94,7 +94,7 @@ jobs:
           repository: enzyme-health/wheel-deploys
           token: ${{ secrets.PAT }}
           path: wheel-deploys
-          ref: main
+          ref: migration/opta-deploy
 
       - name: Install Helm
         uses: azure/setup-helm@v3
