fix: omit successfully from the msg

--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -166,5 +166,5 @@ jobs:
             ${{ inputs.SUPPRESS_HELM_OUTPUT && '> /dev/null' || '' }}
 
           if [[ "${{ inputs.TEST_MODE }}" == "true" ]]; then
-            echo "Helm dry-run completed successfully"
+            echo "Helm dry-run completed"
           fi
