Revert "temp: use wheel-deploys migration/opta-deploy"
This reverts commit 35778200b56baa7e7ca64061af990acade2f8429.

--- a/.github/workflows/helm_deploy.yml
+++ b/.github/workflows/helm_deploy.yml
@@ -114,7 +114,7 @@ jobs:
           repository: enzyme-health/wheel-deploys
           token: ${{ secrets.PAT }}
           path: wheel-deploys
-          ref: migration/opta-deploy
+          ref: main
 
       - name: Install Helm
         uses: azure/setup-helm@v3
